--- a/app/src/main/res/layout/fragment_project_edit_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_edit_prism4d.xml
@@ -1,52 +1,46 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android ="http://schemas.android.com/apk/res/android"
+    xmlns:tools   ="http://schemas.android.com/tools"
     tools:context="com.asc.msigeosystems.prism4d.MainPrism4DActivity"
-    android:layout_width="match_parent"
+
+    android:baselineAligned="false"
+    android:layout_width ="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/colorScreenBackground"
     android:orientation="vertical"
     >
-    <!-- This layout is for creating a new point -->
-    <!--  -->
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
+    <!-- This layout is for creating a new project -->
 
-        >
+    <!-- with layout_width = 0dp, ignore the content width, for horiz orient   -->
+    <!-- with layout_height = 0dp, ignore the content height, vert orient      -->
+    <!-- with layout_weight = 1, distribute width/height between views equally -->
+    <!-- with gravity = center, center text within button                   -->
+    <!-- with layout_gravity=start, place button on left of the row         -->
+    <!-- with background, set button color to gray, grayer, grayest         -->
+    <!-- with paddingStart, set some space between this button and the next -->
 
-        <!-- with layout_width = 0dp, ignore the content width, for horiz orient   -->
-        <!-- with layout_height = 0dp, ignore the content height, vert orient      -->
-        <!-- with layout_weight = 1, distribute width/height between views equally -->
-        <!-- with gravity = center, center text within button                   -->
-        <!-- with layout_gravity=start, place button on left of the row         -->
-        <!-- with background, set button color to gray, grayer, grayest         -->
-        <!-- with paddingStart, set some space between this button and the next -->
-
-        <!-- Container for entire screen -->
-        <TableLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-
-            android:layout_width="match_parent"
+    <!-- Container for entire screen -->
+    <TableLayout
+            android:layout_width ="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center_vertical"
             android:shrinkColumns="*"
             android:stretchColumns="*"
 
             >
-            <!-- Row: Point Screen Label -->
+            <!-- Row 1: Project Screen Label -->
             <TableRow
-
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_width ="match_parent"
                 android:paddingTop="10dp"
+                android:gravity="center"
                 >
                 <TextView
-                    android:id="@+id/pointScreenLabel"
-                    android:text="@string/point_screen_label"
+                    android:text="@string/project_screen_label"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width ="wrap_content"
 
                     android:gravity="center_horizontal"
 
@@ -56,17 +50,17 @@
 
             </TableRow>
 
-            <!-- Row: Project ID -->
+            <!-- Row 2: Project Name -->
             <TableRow
 
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
+                android:layout_width ="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:paddingTop="10dp"
                 >
                 <TextView
-                    android:id="@+id/pointProjectIDLabel"
-                    android:text="@string/point_project_id_label"
+                    android:labelFor="@+id/projectNameInput"
+                    android:text="@string/project_name_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -76,7 +70,7 @@
                     android:background="@color/colorScreenBackground"
                     />
                 <EditText
-                    android:id="@+id/pointProjectIDInput"
+                    android:id="@id/projectNameInput"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -93,8 +87,7 @@
 
             </TableRow>
 
-
-            <!-- Row: Point ID -->
+            <!-- Row 3: Project ID -->
             <TableRow
 
                 android:layout_height="wrap_content"
@@ -103,8 +96,9 @@
                 android:paddingTop="10dp"
                 >
                 <TextView
-                    android:id="@+id/pointIDLabel"
-                    android:text="@string/point_screen_id_label"
+                    android:id=      "@+id/projectIDLabel"
+                    android:labelFor="@+id/projectIDInput"
+                    android:text="@string/project_id_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -114,7 +108,7 @@
                     android:background="@color/colorScreenBackground"
                     />
                 <EditText
-                    android:id="@+id/pointIDInput"
+                    android:id="@id/projectIDInput"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -131,7 +125,7 @@
 
             </TableRow>
 
-            <!-- Row: Point Easting -->
+            <!-- Row 4: Project Creation Date -->
             <TableRow
 
                 android:layout_height="wrap_content"
@@ -140,8 +134,8 @@
                 android:paddingTop="10dp"
                 >
                 <TextView
-                    android:id="@+id/pointEastingLabel"
-                    android:text="@string/point_easting_label"
+                    android:labelFor="@+id/projectCreationDateInput"
+                    android:text="@string/project_creation_date_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -151,13 +145,13 @@
                     android:background="@color/colorScreenBackground"
                     />
                 <EditText
-                    android:id="@+id/pointEastingInput"
+                    android:id="@id/projectCreationDateInput"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="75"
 
-                    android:inputType="text"
+                    android:inputType="date"
                     android:layout_marginEnd="16dp"
 
                     android:textColor="@color/colorTextBlack"
@@ -167,7 +161,7 @@
 
             </TableRow>
 
-            <!-- Row: Point Northing -->
+            <!-- Row 5: Project Last Modified Date -->
             <TableRow
 
                 android:layout_height="wrap_content"
@@ -176,8 +170,8 @@
                 android:paddingTop="10dp"
                 >
                 <TextView
-                    android:id="@+id/pointNorthingLabel"
-                    android:text="@string/point_northing_label"
+                    android:labelFor="@+id/projectModifiedDateInput"
+                    android:text="@string/project_last_modified_date_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -187,13 +181,13 @@
                     android:background="@color/colorScreenBackground"
                     />
                 <EditText
-                    android:id="@+id/pointNorthingInput"
+                    android:id="@id/projectModifiedDateInput"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="75"
 
-                    android:inputType="text"
+                    android:inputType="date"
                     android:imeOptions="flagNoExtractUi"
                     android:layout_marginEnd="16dp"
 
@@ -204,7 +198,7 @@
 
             </TableRow>
 
-            <!-- Row: Point Elevation -->
+            <!-- Row 6: Project Description -->
             <TableRow
 
                 android:layout_height="wrap_content"
@@ -213,8 +207,8 @@
                 android:paddingTop="10dp"
                 >
                 <TextView
-                    android:id="@+id/pointElevationLabel"
-                    android:text="@string/point_elevation_label"
+                    android:labelFor="@+id/projectDescInput"
+                    android:text="@string/project_description_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -224,44 +218,7 @@
                     android:background="@color/colorScreenBackground"
                     />
                 <EditText
-                    android:id="@+id/pointElevationInput"
-
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="75"
-
-                    android:inputType="text"
-                    android:imeOptions="flagNoExtractUi"
-                    android:layout_marginEnd="16dp"
-
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorWhite"
-                    />
-
-
-            </TableRow>
-
-            <!-- Row: Point Description -->
-            <TableRow
-
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                >
-                <TextView
-                    android:id="@+id/pointDescLabel"
-                    android:text="@string/point_description_label"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="25"
-                    android:gravity="end"
-
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
-                <EditText
-                    android:id="@+id/pointDescInput"
+                    android:id="@id/projectDescInput"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -271,7 +228,7 @@
                     android:minLines="6"
                     android:lines="8"
                     android:maxLines="10"
-                    android:gravity="top|left"
+                    android:gravity="top|start"
                     android:scrollbars="horizontal"
 
                     android:imeOptions="flagNoExtractUi"
@@ -284,50 +241,7 @@
 
             </TableRow>
 
-            <!-- Row: Point Notes -->
-            <TableRow
-
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="10dp"
-                >
-                <TextView
-                    android:id="@+id/pointNotesLabel"
-                    android:text="@string/point_notes_label"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="25"
-                    android:gravity="end"
-
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
-                <EditText
-                    android:id="@+id/pointNotesInput"
-
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="75"
-
-                    android:inputType="textMultiLine"
-                    android:minLines="6"
-                    android:lines="8"
-                    android:maxLines="10"
-                    android:gravity="top|left"
-                    android:scrollbars="horizontal"
-
-                    android:imeOptions="flagNoExtractUi"
-                    android:layout_marginEnd="16dp"
-
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorWhite"
-                    />
-
-
-            </TableRow>
-
-            <!-- Row 7: View Existing Points, Save Changes Buttons -->
+            <!-- Row 7: View Existing Projects, Settings Button -->
             <TableRow
 
                 android:layout_height="wrap_content"
@@ -336,38 +250,108 @@
                 android:paddingTop="10dp"
                 >
 
-                <!-- View Existing Points -->
+                <!-- View Project Settings -->
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/pointViewExistingButton"
-                    android:text="@string/point_view_existing_label"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/projectViewSettingsButton"
+                    android:text="@string/project_settings_button_label"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
 
                     android:gravity="center|center_vertical"
                     android:layout_gravity="start"
+
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="4dp"
+
+                    android:background="@color/colorGrayer"
+                    android:textColor="@color/colorTextBlack"
+                    />
+
+                <!-- List Points -->
+                <Button
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:id="@+id/projectListPointsButton"
+                    android:text="@string/list_points_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
 
-                    android:layout_marginStart="16dp"
+                    android:gravity="center|center_vertical"
+                    android:layout_gravity="center_horizontal"
+
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="4dp"
+
+                    android:background="@color/colorGrayer"
+                    android:textColor="@color/colorTextBlack"
+                    />
+
+                <!-- View Existing Projects -->
+                <Button
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:id="@+id/projectViewExistingButton"
+                    android:text="@string/project_view_existing_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+
+                    android:gravity="center|center_vertical"
+                    android:layout_gravity="end"
+
+                    android:layout_marginStart="4dp"
                     android:layout_marginEnd="8dp"
 
                     android:background="@color/colorGrayer"
                     android:textColor="@color/colorTextBlack"
                     />
-                <!-- Save Changes Points -->
+
+
+            </TableRow>
+
+            <!-- Row 8: Exit Button, Save Changes Button -->
+            <TableRow
+
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="10dp"
+                >
+
+                <!-- Exit  -->
                 <Button
                     style="?android:attr/buttonBarButtonStyle"
-                    android:id="@+id/pointSaveChangesButton"
-                    android:text="@string/save_changes_button_label"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/projectExitButton"
+                    android:text="@string/exit_button_label"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
 
                     android:gravity="center|center_vertical"
                     android:layout_gravity="start"
+
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="8dp"
+
+                    android:background="@color/colorGrayer"
+                    android:textColor="@color/colorTextBlack"
+                    />
+
+                <!-- Save Changes -->
+                <Button
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:id="@+id/projectSaveChangesButton"
+                    android:text="@string/save_changes_button_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
 
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:gravity="center|center_vertical"
+                    android:layout_gravity="end"
+
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="8dp"
 
                     android:background="@color/colorGrayer"
                     android:textColor="@color/colorTextBlack"
@@ -375,14 +359,9 @@
 
             </TableRow>
 
-        </TableLayout>
 
 
+    </TableLayout>
 
-    </ScrollView>
-
-    <!-- The Footer will be as standard as possible -->
-    <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
-
-</LinearLayout>
+</ScrollView>
 
