--- a/app/src/main/res/layout/fragment_project_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_list_prism4d.xml
@@ -1,4 +1,4 @@
-<HorizontalScrollView
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools=  "http://schemas.android.com/tools"
     tools:context="com.asc.msigeosystems.prism4d.MainPrism4DActivity"
@@ -11,107 +11,143 @@
     android:orientation=  "vertical"
     >
 
-    <!-- Everything on the screen has to scroll horizontally -->
-    <!-- rest of the screen -->
-    <LinearLayout
-        android:orientation=  "vertical"
-        android:layout_width= "wrap_content"
-        android:layout_height="match_parent"
+    <HorizontalScrollView
+        android:layout_width= "match_parent"
+        android:layout_height="wrap_content"
         >
-        <!-- title line -->
         <LinearLayout
-
-            android:orientation=  "horizontal"
-            android:layout_width= "match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:focusable="false"
-            android:clickable="false"
-
-            android:paddingTop="@dimen/interum_vertical"
-
-            android:background="@color/colorScreenBackground"
+            android:orientation="vertical"
             >
 
-            <!-- ID 3-->
-            <TextView
-                android:text="@string/project_row_id_label"
 
+            <!-- Exit Button -->
+            <Button
+                style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/projectExitButton"
+                android:text="@string/exit_button_label"
+
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="3"
 
+                android:gravity="center|center_vertical"
+                android:layout_gravity="center"
+
+                android:layout_marginStart="4dp"
                 android:layout_marginEnd="8dp"
 
+                android:background="@color/colorGrayer"
                 android:textColor="@color/colorTextBlack"
-                android:background="@color/colorScreenBackground"
                 />
 
-            <!-- Name 7-->
-            <TextView
-                android:text="@string/project_row_name_label"
 
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="7"
-
-                android:layout_marginEnd="8dp"
-
-                android:textColor="@color/colorTextBlack"
-                android:background="@color/colorScreenBackground"
-                />
-
-            <!-- Date last maintained 5-->
-            <TextView
-                android:text="@string/project_row_last_modified_date_label"
-
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="5"
-
-                android:layout_marginEnd="8dp"
-
-                android:textColor="@color/colorTextBlack"
-                android:background="@color/colorScreenBackground"
-                />
-
-            <!-- Size = number of points 3-->
-            <TextView
-                android:text="@string/project_row_size_label"
-
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="3"
-
-                android:layout_marginEnd="8dp"
-
-                android:textColor="@color/colorTextBlack"
-                android:background="@color/colorScreenBackground"
-                />
-        </LinearLayout>
-
-        <!--recycler view for the list of projects-->
-        <ScrollView
-            android:layout_width= "match_parent"
+            <!-- Everything on the screen has to scroll horizontally -->
+            <!-- rest of the screen -->
+            <LinearLayout
+            android:orientation=  "vertical"
+            android:layout_width= "wrap_content"
             android:layout_height="match_parent"
-            android:fillViewport= "true"
             >
+            <!-- title line -->
+            <LinearLayout
 
-            <!-- Recycler view containing the list of projects -->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/projectsList"
-                android:layout_width="match_parent"
+                android:orientation=  "horizontal"
+                android:layout_width= "match_parent"
                 android:layout_height="wrap_content"
+
+                android:focusable="false"
+                android:clickable="false"
+
+                android:paddingTop="@dimen/interum_vertical"
+
+                android:background="@color/colorScreenBackground"
                 >
 
-            </android.support.v7.widget.RecyclerView>
+                <!-- ID 3-->
+                <TextView
+                    android:text="@string/project_row_id_label"
 
-        </ScrollView>
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
 
-    </LinearLayout>
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Name 7-->
+                <TextView
+                    android:text="@string/project_row_name_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="7"
+
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Date last maintained 5-->
+                <TextView
+                    android:text="@string/project_row_last_modified_date_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
+
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+
+                <!-- Size = number of points 3-->
+                <TextView
+                    android:text="@string/project_row_size_label"
+
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+
+                    android:layout_marginEnd="8dp"
+
+                    android:textColor="@color/colorTextBlack"
+                    android:background="@color/colorScreenBackground"
+                    />
+            </LinearLayout>
+
+            <!--recycler view for the list of projects-->
+            <LinearLayout
+                android:layout_width= "match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport= "true"
+                >
+
+                <!-- Recycler view containing the list of projects -->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/projectsList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <!-- Only buttons in the Footer on the Projects list page -->
     <!-- <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/> -->
 
-</HorizontalScrollView>
+</ScrollView>
+
+
 
