--- a/app/src/main/res/layout/fragment_collect_points_map_prism4d.xml
+++ b/app/src/main/res/layout/fragment_collect_points_map_prism4d.xml
@@ -15,17 +15,18 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
+            android:baselineAligned="false"
             >
 
             <!-- main central portion of the screen -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:background="@color/colorGrayer"
-
+                android:baselineAligned="false"
                 >
 
 
@@ -246,17 +247,6 @@
                             />
 
                     </LinearLayout>
-
-                </LinearLayout>
-
-                <!-- old button row on left of screen -->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
-
 
                 </LinearLayout>
 
