--- a/app/src/main/res/layout/fragment_collect_points_prism4d.xml
+++ b/app/src/main/res/layout/fragment_collect_points_prism4d.xml
@@ -15,14 +15,15 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             >
 
             <!-- main central portion of the screen -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:baselineAligned="false"
                 android:orientation="horizontal"
                 android:background="@color/colorGrayer"
 
@@ -241,17 +242,6 @@
                             android:drawableTop="@drawable/ic_notes25"
                             />
                     </LinearLayout>
-
-                </LinearLayout>
-
-                <!-- old button row on left of screen -->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    >
-
 
                 </LinearLayout>
 
