--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,7 @@
     <color name="title">#222222</color>
     <color name="year">#999999</color>
 
+    <color name="disabled">#dcdcdc</color>
+    <color name="enabled">#000000</color>
+
 </resources>
