Commit after crash of Android Studio, due to improper shutdown

--- a/app/src/main/res/layout/fragment_compass_rose.xml
+++ b/app/src/main/res/layout/fragment_compass_rose.xml
@@ -38,14 +38,14 @@
                 android:id="@+id/compass_latitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEND="30dp"
+                android:layout_marginEnd="30dp"
                 />
 
             <TextView
                 android:id="@+id/compass_longitude"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEND="30dp"
+                android:layout_marginEnd="30dp"
                 />
 
         </LinearLayout>
