--- a/app/src/main/res/layout/fragment_coord_conversion_prism4d.xml
+++ b/app/src/main/res/layout/fragment_coord_conversion_prism4d.xml
@@ -392,6 +392,7 @@
                     />
                 <TextView
                     android:id="@+id/utmIntgerOutput"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -439,6 +440,7 @@
                     />
                 <TextView
                     android:id="@+id/utmSOOutput"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -491,6 +493,8 @@
                 <TextView
                     android:id="@+id/utm_zone"
                     android:hint="@string/utm_zone_label"
+                    android:freezesText="true"
+
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="25"
@@ -504,6 +508,7 @@
                 <TextView
                     android:id="@+id/utm_hemisphere"
                     android:hint="@string/utm_hemisphere_label"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -518,6 +523,7 @@
                 <TextView
                     android:id="@+id/utm_latband"
                     android:hint="@string/utm_latband_label"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -570,6 +576,7 @@
                 <TextView
                     android:id="@+id/utm_northing_meters"
                     android:hint="@string/utm_northing_label"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
@@ -609,6 +616,8 @@
                 <TextView
                     android:id="@+id/utm_easting_feet"
                     android:hint="@string/utm_easting_label"
+                    android:freezesText="true"
+
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="37.5"
@@ -623,6 +632,7 @@
                 <TextView
                     android:id="@+id/utm_northing_feet"
                     android:hint="@string/utm_northing_label"
+                    android:freezesText="true"
 
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
