--- a/app/src/main/res/layout/data_point_list_row.xml
+++ b/app/src/main/res/layout/data_point_list_row.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="5"
+
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -35,6 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="6"
+
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -49,6 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="10"
+
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -63,6 +69,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="10"
+
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -77,6 +85,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="10"
+
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -92,6 +102,8 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="5"
+
+        android:gravity="center"
         android:layout_marginEnd="16dp"
 
         android:textColor="@color/colorTextBlack"
