--- a/app/src/main/res/layout/data_project_list_row.xml
+++ b/app/src/main/res/layout/data_project_list_row.xml
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_weight="3"
 
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -53,6 +54,7 @@
         android:layout_width="0dp"
         android:layout_weight="5"
 
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
@@ -67,6 +69,7 @@
         android:layout_width="0dp"
         android:layout_weight="3"
 
+        android:gravity="center"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
