--- a/app/src/main/res/layout/data_satellite_list_row.xml
+++ b/app/src/main/res/layout/data_satellite_list_row.xml
@@ -23,6 +23,7 @@
         android:layout_weight="1"
         android:gravity="center"
 
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
 
         android:textColor="@color/colorTextBlack"
