--- a/app/src/main/res/layout/fragment_collect_points_prism4d.xml
+++ b/app/src/main/res/layout/fragment_collect_points_prism4d.xml
@@ -38,8 +38,9 @@
                     >
 
                     <!-- Current Position Matrix on Left of screen -->
-                    <TextView
-                        android:id="@+id/currentPositionHeader"
+                    <Button
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:id="@+id/currentPositionButton"
                         android:text="@string/current_position_label"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -49,9 +50,11 @@
                         android:paddingBottom="10dp"
                         android:paddingTop="10dp"
                         />
+
                     <TextView
                         android:id="@+id/pointIDField"
                         android:text="@string/point_id_label"
+                        android:freezesText="true"
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"
                         android:gravity="center"
@@ -63,6 +66,7 @@
                     <TextView
                         android:id="@+id/currentNorthingPositionField"
                         android:text="@string/current_northing_label"
+                        android:freezesText="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -73,6 +77,7 @@
                     <TextView
                         android:id="@+id/currentEastingPositionField"
                         android:text="@string/current_easting_label"
+                        android:freezesText="true"
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"
                         android:gravity="center"
@@ -83,6 +88,7 @@
                     <TextView
                         android:id="@+id/currentElevationField"
                         android:text="@string/current_elevation_label"
+                        android:freezesText="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
@@ -90,22 +96,26 @@
                         android:background="@color/colorWhite"
                         android:paddingBottom="10dp"
                         />
-                    <TextView
+                    <EditText
                         android:id="@+id/currentFunctionCodeField"
                         android:text="@string/function_code_label"
+                        android:freezesText="true"
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"
                         android:gravity="center"
+                        android:inputType="textCapCharacters"
                         android:textColor="@color/colorTextBlack"
                         android:background="@color/colorWhite"
                         android:paddingBottom="10dp"
                         />
-                    <TextView
+                    <EditText
                         android:id="@+id/currentHeightField"
                         android:text="@string/current_height_label"
+                        android:freezesText="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:inputType="numberDecimal"
                         android:textColor="@color/colorTextBlack"
                         android:background="@color/colorWhite"
                         android:paddingBottom="10dp"
