--- a/app/src/main/res/layout/fragment_footer_inclusion_prism4d.xml
+++ b/app/src/main/res/layout/fragment_footer_inclusion_prism4d.xml
@@ -53,7 +53,7 @@
                 android:gravity="top|center|center_horizontal">
 
                 <TextView
-                    android:id="@+id/currentFilenameField"
+                    android:id="@+id/currentProjectField"
                     android:text="@string/filename_label"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
