--- a/app/src/main/res/layout/fragment_satellite_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_satellite_list_prism4d.xml
@@ -43,6 +43,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
 
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
 
                     android:textColor="@color/colorTextBlack"
